# akatsuki-pp-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs
src/any/: calc_error.rs  mod.rs
src/any/difficulty/: gradual.rs  mod.rs
src/any/performance/: gradual.rs  mod.rs
src/catch/: mod.rs
src/catch/difficulty/: gradual.rs  mod.rs
src/catch/performance/: gradual.rs  mod.rs
src/mania/: mod.rs
src/mania/difficulty/: gradual.rs  mod.rs
src/mania/performance/: gradual.rs  mod.rs
src/mania/performance/hitresult_generator/: fast.rs  ignore_acc.rs
src/model/: mode.rs
src/model/beatmap/: suspicious.rs
src/osu/: attributes.rs  mod.rs
src/osu/difficulty/: gradual.rs  mod.rs
src/osu/performance/: calculator.rs  gradual.rs  mod.rs
src/osu/performance/hitresult_generator/: fast.rs  ignore_acc.rs
src/osu_2019/: difficulty_object.rs  mod.rs  pp.rs  reading.rs  reading_skill.rs  skill.rs  skill_kind.rs  stars.rs
src/taiko/: mod.rs
src/taiko/difficulty/: gradual.rs  mod.rs
src/taiko/performance/: gradual.rs  mod.rs
src/taiko/performance/hitresult_generator/: ignore_acc.rs
src/util/: map_or_attrs.rs
tests/: decode.rs  difficulty.rs  performance.rs
