[package]
name = "akatsuki-pp"
version = "1.4.0"
edition = "2024"
authors = ["MaxOhn <ohn.m@hotmail.de>", "tsunyoku <tsunyoku@gmail.com>", "Aochi <me@aochi.uk>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/RealistikOsu/akatsuki-pp-rs"
description = "Difficulty and performance calculation for osu!"
keywords = ["osu", "pp", "stars", "performance", "difficulty"]

[features]
default = []
sync = []
tracing = ["rosu-map/tracing"]

[dependencies]
divan = "0.1.21"
rosu-map = { version = "0.2.1" }
rosu-mods = { version = "0.4.0" }
clap = { version = "4.5.47", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
ureq = { version = "2.12.1", default-features = true, features = ["json"] }

[dev-dependencies]
divan = { version = "0.1.21" }
proptest = { version = "1.8.0" }
rosu-mods = { version = "0.4.0", features = ["macros"] }

[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3

[[bench]]
name = "hitresult_generators"
harness = false

